à faire correction mobile first pour slider +header

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body {
     margin: 0;
 
 }
-main{
+
+main {
     display: flex;
     flex-direction: column;
 }
@@ -41,6 +42,11 @@ main{
         font-weight: 800;
         color: rgb(100 148 65);
     }
+    /* .slider-container{
+         display: none;
+        
+    } */
+
     /* .menu_desktop{
     display: none;
     } */
@@ -62,9 +68,12 @@ main{
         -moz-box-shadow: 10px 10px 24px 0px rgba(0, 0, 0, 0.75);
         box-shadow: 10px 10px 24px 0px rgb(0 0 0 / 75%);
     }
-    .contenaire2{
-        display: none;
-    }
+
+
+
+.container2 {
+    display: none;
+}
 
 .logo-header {
     display: flex;
@@ -315,11 +324,13 @@ input {
     border-style: hidden;
     border-bottom: 1px solid;
     color: rgb(193 193 193);
-    
+
 }
-input::-webkit-input{
+
+input::-webkit-input {
     -webkit-appearance: none;
 }
+
 .btn-1 {
     text-align: center;
     text-decoration: none;
@@ -385,9 +396,10 @@ input::-webkit-input{
     border-radius: 50%;
     border: none;
     cursor: pointer;
-    
+
 }
-.btn-help::-webkit-btn-help{
+
+.btn-help::-webkit-btn-help {
     -webkit-appearance: none;
 }
 
@@ -561,7 +573,7 @@ input::-webkit-input{
     font-size: 14px;
 }
 
-.card-new::-webkit-card-new{
+.card-new::-webkit-card-new {
     -webkit-appearance: none;
 }
 
@@ -598,9 +610,6 @@ input::-webkit-input{
     color: rgb(100 148 65);
 }
 
-/* .fa-mug-hot-green{
-        color: rgb(100 148 65);
-    } */
 
 .text_boutique {
     font-family: 'Lato';
@@ -608,165 +617,243 @@ input::-webkit-input{
     text-align: left;
     font-weight: 800;
 }
+}
+
 
 
 @media screen and (min-width: 768px) {}
 
 @media screen and (min-width: 992px) {
-    .img_tea_tree{
+    .img_tea_tree {
         width: 420px;
         height: auto;
-        
+
     }
+
     * {
         box-sizing: border-box;
     }
-    body{
+
+    body {
         margin: 0;
         background-color: #ffff;
     }
 
-main{
-    padding: 0;
-}
-.logo{
-    width: 20%;
-}
-
-.contenaire{
-   max-width: 1340px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    visibility: hidden;
-}
-.menu_desktop{
-    max-width: 1340px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: row-reverse;
-}
-.logo_desktop{
-    display: flex;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-top: auto;
-    max-width: 1340px;
-    width: 270px;
-
-}
-.contenaire1{
-    max-width: 1340px;
-    width: 30%;
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    display: flex;
-    align-items: flex-start;
-}
-.contenaire2{
-    max-width: 1340px;
-    width: 30%;
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    display: flex;
-    align-items: flex-start;
-}
-
-.nav_desktop {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    padding: 20px 0;
-}
-.ul-nav{
-display:flex;
-    flex-direction: row;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'Lato';
-    padding: 20px 0;
-}
-.li-nav{
-    display: flex;
-    padding: 0 20px;
-    
-}
-.lien_href{
-    text-decoration: none;
-    color: #4e362b;
-
-}
-
-    .center-body{
-        max-width: 1340px;
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
+    main {
+        padding: 0;
     }
-    .wapper_header{
-        width: 100%;
+
+    .logo {
+        width: 20%;
+    }
+
+    .contenaire {
         max-width: 1340px;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
-        position: relative;
+        display: flex;
         visibility: hidden;
     }
-    .btn-position, .btn-position1{
+
+    .menu_desktop {
+        max-width: 1340px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
+    .logo_desktop {
+        display: flex;
+        justify-content: space-between;
+        margin-left: auto;
+        margin-top: auto;
+        max-width: 1340px;
+        width: 270px;
+
+    }
+
+    .contenaire1 {
+        max-width: 1340px;
+        width: 30%;
+        /* margin-left: auto; */
+        /* margin-right: auto; */
+        display: flex;
+        align-items: flex-start;
+    }
+
+    .contenaire2 {
+        max-width: 1340px;
+        width: 30%;
+        /* margin-left: auto; */
+        /* margin-right: auto; */
+        display: flex;
+        align-items: flex-start;
+    }
+
+    .nav_desktop {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        padding: 20px 0;
+    }
+
+    .ul-nav {
+        display: flex;
+        flex-direction: row;
+        font-size: 20px;
+        font-weight: bold;
+        font-family: 'Lato';
+        padding: 20px 0;
+    }
+
+    .li-nav {
+        display: flex;
+        padding: 0 20px;
+
+    }
+
+    .lien_href {
+        text-decoration: none;
+        color: #4e362b;
+
+    }
+
+    .center-body {
+        max-width: 1340px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .wapper_header {
+
+        visibility: hidden;
+    }
+
+    .btn-position,
+    .btn-position1 {
         width: 225px;
         margin-top: 250px;
         margin-left: 95px;
     }
-    .menu-wrap{
+
+    .menu-wrap {
         position: relative;
         display: flex;
         justify-content: flex-end;
-      
+
     }
-    .scrollport{
-        display:flex;
-       flex-direction: row;
+
+    .scrollport {
+        display: flex;
+        flex-direction: row;
         max-width: 1340px;
         width: 100%;
         margin-left: auto;
         margin-right: auto;
         justify-content: space-evenly;
         margin-top: -390px;
-       
+
     }
-   
-    .section_contener{
+
+    .section_contener {
         max-width: 1415px;
         width: 100%;
         margin: 0 350px;
         display: flex;
         justify-content: space-evenly;
-        
+
     }
-    .slider{
+
+    .slider {
         width: 378px;
         display: flex;
-    justify-content: space-around;
+        justify-content: space-around;
     }
-    .img_tea_tree1{
+
+    .img_tea_tree1 {
         width: 200px;
-       border-radius: 35px;
+        border-radius: 35px;
     }
-    footer{
+
+    footer {
         max-width: 1340px;
         width: 100%;
         margin-left: auto;
         margin-right: auto;
     }
-    .logo-header{
+
+    .logo-header {
         max-width: 1340px;
         width: 100%;
         /* margin-left: auto;
         margin-right: auto; */
         display: flex;
         justify-content: flex-end;
-    
+
+    }
+
+    img {
+        max-width: 100%;
+    }
+
+    .slider-container {
+        max-width: 1300px;
+        position: relative;
+        margin: auto;
+        margin-top: 30px;
+        height: 500px;
+        overflow: hidden;
+
+    }
+
+    .menu {
+        position: absolute;
+        left: 0;
+        z-index: 11;
+        width: 100%;
+        bottom: 0;
+        text-align: center;
+    }
+
+    .menu label {
+        cursor: pointer;
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        background: #ccc;
+        border-radius: 50px;
+        margin: 0 0.2em 1em;
+    }
+
+    .menu label:hover,
+    .menu label:focus {
+        background: #1c87c9;
+    }
+
+    .slide-input {
+        opacity: 0;
+    }
+
+    .slide-img {
+        width: 100%;
+        height: 450px;
+        position: absolute;
+        top: 0;
+        left: 100%;
+        z-index: 10;
+        transition: left 0s 0.75s;
+        object-fit: cover;
+    object-position: top;
+    border-radius: 25px;
+    }
+
+    [id^="slide"]:checked+.slide-img {
+        left: 0;
+        z-index: 100;
+        transition: left 0.65s ease-out;
     }
 
     /*pop up window*/
